--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   },
   "homepage": "https://github.com/thealmightygrant/teereal-sales",
   "devDependencies": {
+    "config": "^1.16.0",
+    "extend": "^3.0.0",
     "gulp": "^3.9.0",
-    "gulp-compile-handlebars": "^0.5.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-data": "^1.2.0",
-    "gulp-handlebars": "^4.0.0",
+    "gulp-headerfooter": "^1.0.3",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
-    "handlebars": "^4.0.2",
-    "merge-stream": "^1.0.0"
+    "gulp-util": "^3.0.6",
+    "handlebars": "^4.0.3",
+    "merge-stream": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
