--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "config": "^1.16.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-debug": "^2.1.2",
     "gulp-headerfooter": "^1.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.6",
     "handlebars": "^4.0.3",
