--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/thealmightygrant/teereal-sales",
   "devDependencies": {
+    "browserify": "^12.0.1",
     "config": "^1.16.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.0",
@@ -24,9 +25,16 @@
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "handlebars": "^4.0.3",
     "merge-stream": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "through2": "^2.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4"
   }
 }
